tagger now works under Unix